<resources>
    <string name="app_name">InventoryApp</string>
    <string name="delete_all_books">Delete all books</string>
    <string name="book_contains">The books table contains&#160;</string>
    <string name="books">&#160;books</string>
    <string name="lord_of_the_rings">Lord of the Rings</string>
    <string name="amazon">Amazon</string>
    <string name="phone_number">00 1 206-266-2992</string>
    <string name="book_saved">Book saved with ID:</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="sale">Sale</string>
    <string name="get_started">Get started by adding a book</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_message">Delete all books?</string>
    <string name="details">Book Details</string>
    <string name="book_name">Book name</string>
    <string name="supplier_name">Supplier name</string>
    <string name="supplier_phone_number">Supplier phone number</string>
    <string name="add_book">Add a book</string>
    <string name="edit_book">Edit book</string>
    <string name="delete_book">Delete book</string>
    <string name="delete_book_dialog_message">Delete this book?</string>
    <string name="delete_book_failed">Error with deleting book</string>
    <string name="delete_book_success">Book deleted</string>
    <string name="delete_all_books_success">All books deleted</string>
    <string name="delete_all_books_failed">Error with deleting all books</string>
    <string name="save_book">Save book</string>
    <string name="unsaved_changes_dialog_message">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="save_book_failed">Error with saving book</string>
    <string name="save_book_success">Book saved</string>
    <string name="update_book_failed">Error with updating book</string>
    <string name="update_book_success">Book updated</string>
    <string name="book_name_required">Book name is required</string>
    <string name="price_required">Price is required</string>
    <string name="quantity_required">Quantity is required</string>
    <string name="supplier_name_required">Supplier name is required</string>
    <string name="supplier_phone_required">Supplier phone number is required</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="decrease_quantity">Decrease quantity</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="contact_supplier">Contact supplier</string>
</resources>
